# quetz

./: (get_config)):  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  RELEASE.md  _typos.toml  alembic.ini  config.toml  dev_config.toml  docker-compose.yml  docker_config.toml  download-test-package.sh  environment.yml  init_db.py  mypy.ini  prometheus.yml  pyproject.toml  set_env_dev.sh  setup.cfg  setup.py  test-cli-client.sh  test-new-endpoint.sh
.github/workflows/: ci.yml  docker-build-push.yml  docker-build.yml  enforce-label.yml  lint.yml  mypy.ini  mypy.yml  sphinx.yml
basic_frontend/: index.html
docker/: Dockerfile  Dockerfile.jupyterhub  docker_config.toml  grafana.env  graphana_datasources.yml  jupyterhub_config.py  nginx.conf  postgres.conf  postgres.env  prometheus.yml  wait-for-postgres.sh
dockerfiles/: Dockerfile
docs/source/: conf.py  configuration.rst  hooks.rst  index.rst  plugins.rst
docs/source/api/: index.rst
docs/source/deploying/: authenticators.rst  configuration.rst  database.rst  frontend.rst  index.rst  migrations.rst  nginx.rst  workers.rst
docs/source/development/: doc.rst  frontend.rst  index.rst
docs/source/getting_started/: index.rst
docs/source/qeps/: index.rst  qep-001-user-permissions.rst
docs/source/user_guide/: cli.rst  config.rst  index.rst
docs/source/using/: basics.rst  index.rst  mirroring.rst
migrations/versions/: 0653794b6252_adding_url_and_platforms_dirs.py  303ff70c27fc_configure_mirror_endpoints.py  98c04a65df4a_register_mirrors.py  cddba8e6e639_scheduling_spec_for_jobs.py
plugins/: README.md
plugins/quetz_conda_suggest/: README.md  setup.py
plugins/quetz_conda_suggest/quetz_conda_suggest/: api.py  db_models.py  main.py
plugins/quetz_conda_suggest/tests/: conftest.py  test_main.py  test_quetz_conda_suggest.py
plugins/quetz_conda_trust/: README.md  requirements.txt  setup.py
plugins/quetz_conda_trust/quetz_conda_trust/: api.py  db_models.py  main.py  repo_signer.py
plugins/quetz_conda_trust/tests/: conftest.py  test_main.py  test_quetz_conda_trust.py
plugins/quetz_content_trust/: README.md  conda-requirements.txt  setup.py
plugins/quetz_content_trust/docs/: test_corrupted_key_mgr_metadata.py  test_corrupted_key_mgr_sigs.py  test_script.py  testing.rst
plugins/quetz_content_trust/quetz_content_trust/: api.py  db_models.py  main.py  repo_signer.py  rest_models.py
plugins/quetz_content_trust/tests/: conftest.py  test_quetz_content_trust.py
plugins/quetz_current_repodata/: README.md  setup.py
plugins/quetz_current_repodata/quetz_current_repodata/: main.py
plugins/quetz_current_repodata/tests/: conftest.py  test_current_repodata.py
plugins/quetz_dictauthenticator/: README.md  setup.py
plugins/quetz_dictauthenticator/quetz_dictauthenticator/: __init__.py
plugins/quetz_dictauthenticator/tests/: conftest.py  test_authenticator.py
plugins/quetz_googleiap/: setup.py
plugins/quetz_googleiap/quetz_googleiap/: middleware.py
plugins/quetz_googleiap/tests/: conftest.py  test_googleiap.py
plugins/quetz_harvester/: README.md  setup.py
plugins/quetz_harvester/quetz_harvester/: api.py  harvest.py  jobs.py  main.py
plugins/quetz_harvester/tests/: conftest.py  test_main.py
plugins/quetz_mamba_solve/: README.md  conda-requirements.txt  requirements.txt  setup.py
plugins/quetz_mamba_solve/quetz_mamba_solve/: api.py  rest_models.py  solver.py  utils.py
plugins/quetz_repodata_patching/: README.md  setup.py
plugins/quetz_repodata_zchunk/: README.md  conda-requirements.txt  setup.py
plugins/quetz_runexports/: MANIFEST.in  README.md  alembic.ini  setup.py
plugins/quetz_sql_authenticator/: README.md  setup.py
plugins/quetz_tos/: README.md  setup.py
plugins/quetz_transmutation/: README.md  requirements.txt  setup.py
quetz/: __init__.py  _config.py  _version.py  auth_github.py  auth_google.py  authorization.py  channel_data.py  cli.py  condainfo.py  config.py  config.toml  dao.py  dao_github.py  dao_google.py  database.py  database_extensions.py  db_models.py  deps.py  errors.py  exceptions.py  frontend.py  hooks.py  indexing.py  lib.py  main.py  mirror.py  pkgstores.py  repo_data.py  rest_models.py  tasks.py  utils.py  versionorder.py
quetz/authentication/: __init__.py  auth_dao.py  azuread.py  base.py  github.py  gitlab.py  google.py  jupyterhub.py  oauth2.py  pam.py  registry.py
quetz/basic_frontend/: index.html
quetz/jobs/: api.py  dao.py  handlers.py  models.py  rest_models.py  runner.py
quetz/metrics/: __init__.py  api.py  db_models.py  middleware.py  rest_models.py  tasks.py  view.py
quetz/migrations/: env.py
quetz/tasks/: __init__.py  assertions.py  cleanup.py  common.py  indexing.py  mirror.py  reindexing.py  workers.py
quetz/templates/: channeldata-index.html.j2  subdir-index.html.j2
quetz/testing/: fixtures.py  mockups.py  utils.py
quetz/tests/: conftest.py  test_auth.py  test_auth_github.py  test_cli.py  test_config.py  test_dao.py  test_database.py  test_db_models.py  test_docs.py  test_github_dao.py  test_health.py  test_indexing.py  test_jobs.py  test_main.py  test_mirror.py  test_pkg_stores.py  test_profiling.py  test_tasks.py  test_versionorder.py  test_workers.py
quetz_client/: meta.yaml  pyproject.toml  quetz  setup.cfg  setup.py
quetz_client/quetz_client/: __init__.py  command_line.py
quetz_db_ext/: CMakeLists.txt  Dockerfile  LIBSOLV_LICENSE.txt  conda.c  conda.h  quetz_pg.c  quetz_sqlite.c
quetz_frontend/: README.md  package-lock.json  package.json  vue.config.js
quetz_frontend/public/: index.html
quetz_frontend/src/: App.vue  main.js  router.js
sample_plugin/: api.py  conftest.py  db_models.py  main.py  setup.py
static/: index.html
static/quetz-frontend/: package.json  vue.config.js
tests/: test_dao.py  test_indexing.py  test_workers.py
tests/api/: conftest.py  test_api_keys.py
tests/authentification/: test_base.py
tests/data/: other-package-0.2-0.tar.bz2  test-package-0.1-0_copy.tar.bz2
utils/: repodata_compare.py
(+118 files in other folders)
