[build-system]
requires = ["setuptools>=41", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.jupyter-releaser.options]
check-imports = ["quetz"]

[tool.tbump.version]
current = "0.3.0"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "quetz/_version.py"
version_template = '({major}, {minor}, {patch}, "{channel}", "{release}")'
