[build-system]
requires = ["setuptools>=41", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode="strict"

[tool.black]
skip-string-normalization = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.jupyter-releaser.options]
check-imports = ["quetz"]

[tool.check-wheel-contents]
ignore = ["W004"]

[tool.tbump.version]
current = "0.7.0"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "quetz/_version.py"
version_template = '({major}, {minor}, {patch}, "{channel}", "{release}")'

[tool.pyright]
include = ["quetz"]
reportGeneralTypeIssues = false
reportMissingImports = true
reportMissingModuleSource = true
reportMissingTypeStubs = false
reportOptionalMemberAccess = true
reportOptionalOperand = true
reportOptionalSubscript = true
reportPrivateImportUsage = true
reportUnboundVariable = true
reportUndefinedVariable = false
venv = ".venv"
venvPath= "."
