[build-system]
requires = ["setuptools>=41", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quetz-server"
dynamic = ["version"]
authors=[
    {name="QuantStack & Quetz contributors", email="wolf.vollprecht@quantstack.net"},
]
keywords = [
  "conda",
  "mamba",
  "server"
]
readme = "README.md"
description = "The mamba-org server for conda packages"
requires-python = ">=3.7"
license = {file = "LICENSE"}
dependencies = [
  "alembic",
  "aiofiles",
  "appdirs",
  "authlib<1.0.0",
  "fastapi",
  "fsspec",
  "h2",
  "httpx>=0.22.0",
  "importlib-metadata",
  "itsdangerous",
  "jinja2",
  "pluggy",
  "prometheus_client",
  "python-multipart",
  "pyyaml",
  "requests",
  "sqlalchemy",
  "sqlalchemy-utils",
  "tenacity",
  "toml",
  "typer",
  "typing_extensions",
  "ujson",
  "uvicorn",
  "zstandard"
]

[project.optional-dependencies]
azure = "adlfs"
gcs = "gcsfs >=2022.02"
pam = "pamela"
postgre = "psycopg2"
s3 = "s3fs"
client = "quetz-client"
dev = [
  "black",
  "flake8",
  "isort",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "pytest-cov",
  "pytest-timeout",
  "tbump"
]
test = "quetz-server[dev]"
all = [
  "quetz-server[azure]",
  "quetz-server[gcs]",
  "quetz-server[pam]",
  "quetz-server[postgre]",
  "quetz-server[s3]"
]

[project.urls]
Homepage = "https://github.com/mamba-org/quetz"
Repository = "https://github.com/mamba-org/quetz"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "quetz._version.__version__"}

[project.scripts]
quetz = "quetz.cli:app"

[tool.pytest.ini_options]
asyncio_mode="strict"

[tool.black]
skip-string-normalization = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.jupyter-releaser.options]
check-imports = ["quetz"]

[tool.check-wheel-contents]
ignore = ["W004"]

[tool.tbump.version]
current = "0.7.0"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "quetz/_version.py"
version_template = '({major}, {minor}, {patch}, "{channel}", "{release}")'

[tool.pyright]
include = ["quetz"]
reportGeneralTypeIssues = false
reportMissingImports = true
reportMissingModuleSource = true
reportMissingTypeStubs = false
reportOptionalMemberAccess = true
reportOptionalOperand = true
reportOptionalSubscript = true
reportPrivateImportUsage = true
reportUnboundVariable = true
reportUndefinedVariable = false
venv = ".venv"
venvPath= "."

[tool.mypy]
ignore_missing_imports = true
plugins = [
  "sqlmypy"
]
disable_error_code = [
  "misc"
]

[tool.coverage.run]
omit = [
  "quetz/tests/*",
]
