[metadata]
name = quetz
version = attr: quetz._version.__version__
description = The mamba-org server for conda packages
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = QuantStack & Quetz contributors
author_email = wolf.vollprecht@quantstack.net
url = https://github.com/mamba-org/quetz
platforms = Linux, Mac OS X
keywords = conda, mamba, server

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
  
install_requires =
  fastapi
  typer
  authlib
  alembic
  psycopg2
  httpx~=0.20.0
  sqlalchemy
  sqlalchemy-utils
  python-multipart
  uvicorn
  zstandard
  appdirs
  toml
  quetz-client
  fsspec
  requests
  h2<4.0.0
  pluggy
  jinja2
  itsdangerous
  s3fs
  gcsfs >=2021.10.1
  tenacity
  xattr
  aiofiles
  pyyaml
  ujson
  prometheus_client
  pamela
  typing_extensions
  adlfs

[options.entry_points]
console_scripts =
    quetz = quetz.cli:app

[options.extras_require] 
dev =
  black
  flake8
  isort
  pre-commit
  pytest
  pytest-asyncio
  pytest-mock
  pytest-cov
