[metadata]
name = quetz
version = attr: quetz._version.__version__
description = The mamba-org server for conda packages
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = QuantStack & Quetz contributors
author_email = wolf.vollprecht@quantstack.net
url = https://github.com/mamba-org/quetz
platforms = Linux, Mac OS X
keywords = conda, mamba, server

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
  
install_requires =
  fastapi
  typer
  authlib
  alembic
  httpx~=0.20.0
  sqlalchemy
  sqlalchemy-utils
  python-multipart
  uvicorn
  zstandard
  appdirs
  toml
  fsspec
  requests
  h2<4.0.0
  pluggy
  jinja2
  itsdangerous
  tenacity
  xattr
  aiofiles
  pyyaml
  ujson
  prometheus_client
  typing_extensions

[options.entry_points]
console_scripts =
    quetz = quetz.cli:app

[options.extras_require]
azure =
  adlfs
gcs =
  gcsfs >=2021.10.1
pam = 
  pamela
postgre =
  psycopg2
s3 =
  s3fs
sqlite =
  sqlite3
all =
  %(azure)s
  %(gcs)s
  %(pam)s
  %(postgre)s
  %(s3)s
  %(sqlite)s
client =
  quetz-client
dev =
  black
  flake8
  isort
  pre-commit
  pytest
  pytest-asyncio
  pytest-mock
  pytest-cov
  tbump
