[metadata]
name = quetz-server
version = attr: quetz._version.__version__
description = The mamba-org server for conda packages
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = QuantStack & Quetz contributors
author_email = wolf.vollprecht@quantstack.net
url = https://github.com/mamba-org/quetz
platforms = Linux, Mac OS X
keywords = conda, mamba, server

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  alembic
  aiofiles
  appdirs
  authlib<1.0.0
  fastapi
  fsspec
  h2
  httpx>=0.22.0
  importlib-metadata
  itsdangerous
  jinja2
  pluggy
  prometheus_client
  python-multipart
  pyyaml
  requests
  sqlalchemy
  sqlalchemy-utils
  tenacity
  toml
  typer
  typing_extensions
  ujson
  uvicorn
  xattr
  zstandard

[options.entry_points]
console_scripts =
    quetz = quetz.cli:app

[options.extras_require]
azure =
  adlfs
gcs =
  gcsfs >=2022.02
pam =
  pamela
postgre =
  psycopg2
s3 =
  s3fs
all =
  %(azure)s
  %(gcs)s
  %(pam)s
  %(postgre)s
  %(s3)s
client =
  quetz-client
dev =
  black
  flake8
  isort
  pre-commit
  pytest
  pytest-asyncio
  pytest-mock
  pytest-cov
  pytest-timeout
  tbump
test =
  %(dev)s

[tool:check-wheel-contents]
ignore = W004
